--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <header>
-      <h1 class="header-text">UnitConverter.now</h1>
+      <h1 class="header-text1">Unit</h1>
+      <h1 class="header-text2">Converter</h1>
+      <h1 class="header-text3">.now</h1>
     </header>
     <div class="container">
     <p class="h1">Convert your unit below:</p>
@@ -47,5 +49,4 @@
     </div>
   </body>
 </html>
-
 
